tests/fixtures/syntax/valid/string_literal_quote_in_case_name.repor
case "a \"quoted\" case name" {
  $ true
  assert {
    exit 0
  }
}
