tests/fixtures/syntax/invalid/write_step_path_fixture_reference.repor
case "write step path requires a workspace path literal, not a fixture reference" {
  write @"out.txt" "content"
  $ true
  assert {
    exit 0
  }
}
